syntax = "proto3";

option go_package = ".;ezCaptchaPB";

message EZCaptchaRsp {
  bool suc = 1;
  string err_desc = 2;
  string correct_answer = 3;
  string png_base64 = 4;
}
message EZCaptchaEmpty {}
service EZCaptchaService {
  rpc GetCaptcha(EZCaptchaEmpty) returns (EZCaptchaRsp) {}
}